[project]
authors = [{name = "Norman Fomferra", email = "norman.fomferra@brockmann-consult.de"}]
dependencies = []
name = "pyre"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/pyre"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
src = ["src/pyre"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.dependencies]
pydantic = ">=2.13.3,<3"
pyaml = ">=26.2.1,<27"
pytest = ">=9.0.3,<10"
pytest-asyncio = ">=1.3.0,<2"
pytest-cov = ">=7.1.0,<8"
pixi-pycharm = ">=0.0.11,<0.0.12"
ruff = ">=0.15.11,<0.16"
mypy = ">=1.20.2,<2"
isort = ">=8.0.1,<9"
fastapi = ">=0.136.1,<0.137"
uvicorn = ">=0.46.0,<0.47"
websocket = ">=0.2.1,<0.3"
httpx = ">=0.28.1,<0.29"
jupyter = ">=1.1.1,<2"

[tool.pixi.pypi-dependencies]
pyre = { path = ".", editable = true }

[tool.pixi.tasks]
format = "ruff format src"
checks = "ruff check src"
tests = "pytest tests"
isort = "isort src"

