[project]
name = "remotestate"
version = "0.3.4.dev0"
authors = [{name = "forman"}]
description = "Python state, React UI."
readme = "README.md"
keywords = ["python", "state", "react", "ui", "jupyter"]
license = {text = "MIT"}
license-files = ["LICENSE"]
requires-python = ">= 3.12"
dependencies = [
  "fastapi>=0.136,<1",
  "pydantic>=2,<3",
  "uvicorn>=0.46,<1"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://github.com/bcdev/remotestate", Issues = "https://github.com/bcdev/remotestate/issues", Repository = "https://github.com/bcdev/remotestate"}

[tool.hatch.build.targets.wheel]
packages = ["src/remotestate"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

[tool.ruff]
src = ["src/remotestate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.dependencies]
# library dependencies
fastapi = ">=0.136.1,<0.137"
pydantic = ">=2.13.3,<3"
uvicorn = ">=0.46.0,<0.47"
# development dependencies
httpx = ">=0.28.1,<0.29"
isort = ">=8.0.1,<9"
jupyter = ">=1.1.1,<2"
mypy = ">=1.20.2,<2"
pixi-pycharm = ">=0.0.11,<0.0.12"
pytest = ">=9.0.3,<10"
pytest-asyncio = ">=1.3.0,<2"
pytest-cov = ">=7.1.0,<8"
ruff = ">=0.15.11,<0.16"
twine = ">=6.2.0,<7"

[tool.pixi.pypi-dependencies]
build = ">=1,<2"
hatchling = ">=1,<2"
remotestate = { path = ".", editable = true }

[tool.pixi.tasks]
build = "python -m build"
isort = "isort src tests"
jl = "jupyter-lab"
mypy = "mypy src"
ruff-check = "ruff check src tests"
ruff-format = "ruff format src tests"
tests = "pytest tests"

[tool.pixi.tasks.checks]
depends-on = [
  "ruff-check",
  "mypy",
]

[tool.pixi.tasks.format]
depends-on = [
  "isort",
  "ruff-format",
]